--- a/src/main/js/package.json
+++ b/src/main/js/package.json
@@ -5,12 +5,17 @@
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "rest": "^1.3.1",
+    "ajv": "^6.5.2",
+    "sockjs-client": "^1.0.3",
+    "stompjs": "^2.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
