--- a/src/main/js/package.json
+++ b/src/main/js/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.5.2",
+    "dotenv": "^6.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-map-gl": "^3.2.0",
     "react-scripts": "1.1.4",
     "rest": "^1.3.1",
-    "ajv": "^6.5.2",
     "sockjs-client": "^1.0.3",
     "stompjs": "^2.3.3"
   },
