orekit library included in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.orekit</groupId>
+            <artifactId>orekit</artifactId>
+            <version>9.2</version>
+        </dependency>
 	</dependencies>
 
 	<build>
